--- a/shell/package.json
+++ b/shell/package.json
@@ -21,10 +21,14 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "html-webpack-plugin": "^5.6.3",
