--- a/shell/package.json
+++ b/shell/package.json
@@ -2,12 +2,12 @@
   "name": "shell",
   "version": "1.0.0",
   "description": "The host app for remote apps",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "author": "Ramazan Ozdemir",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.js"
+    "start": "cross-env NODE_ENV=development webpack serve --config webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "dependencies": {
     "react": "^19.1.0",
