--- a/shell/package.json
+++ b/shell/package.json
@@ -33,6 +33,7 @@
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
