--- a/shell/package.json
+++ b/shell/package.json
@@ -10,8 +10,13 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.508.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
