--- a/shell/package.json
+++ b/shell/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^10.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "file-loader": "^6.2.0",
