--- a/shell/package.json
+++ b/shell/package.json
@@ -27,6 +27,8 @@
     "@babel/preset-env": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@module-federation/enhanced": "^0.13.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
     "@tailwindcss/postcss": "^4.1.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
