--- a/shell/package.json
+++ b/shell/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.9"
   },
