--- a/users-fragment/package.json
+++ b/users-fragment/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.77.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
@@ -24,6 +25,7 @@
     "@babel/preset-typescript": "^7.27.1",
     "@module-federation/enhanced": "^0.13.1",
     "@tailwindcss/postcss": "^4.1.5",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
