--- a/products-fragment/package.json
+++ b/products-fragment/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.77.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
