--- a/shell/vercel.json
+++ b/shell/vercel.json
@@ -1,3 +1,6 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
