--- a/shell/vercel.json
+++ b/shell/vercel.json
@@ -1,6 +1,11 @@
 {
   "cleanUrls": true,
   "trailingSlash": false,
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "rewrites": [
+    { "source": "/static/(.*)", "destination": "/static/$1" },
+    { "source": "/(.*).js", "destination": "/$1.js" },
+    { "source": "/(.*).css", "destination": "/$1.css" },
+    { "source": "/(.*)", "destination": "/" }
+  ],
   "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
